# template

./: CMakeLists.txt  MIT.md  README.md  header  main.cpp
executable/: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
